# pysonycam

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
docs/: creative_recipes.json  hfr_video_transfer_investigation.md  implementation_plan.md  missing_features.md
docs/sdk/: camera_control_ptp_2_reference.md  camera_control_ptp_3_reference.md  camera_control_ptp_example_instruction_manual.md  readme.md
examples/: README.md  advanced_focus.py  astrophotography.py  basic_usage.py  browse_and_download.py  burst_capture.py  camera_status.py  capture_photo.py  change_settings.py  continuous_burst.py  creative_look_recipes.py  custom_white_balance.py  download_videos.py  event_listener.py  hfr_slow_motion.py  interactive_shutter.py  live_viewfinder.py  liveview_stream.py  picture_profile.py  rapid_fire.py  requirements.txt  sq_mode_capture.py  timelapse.py  zoom_control.py
pysonycam/: __init__.py  camera.py  constants.py  format.py  parser.py  ptp.py
pysonycam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/: README.md  install.bat  install.sh  pyproject.toml  requirements.txt
python/examples/: basic_usage.py  continuous_burst.py  live_viewfinder.py  zoom_control.py
python/sony_camera_control/: __init__.py  camera.py  constants.py  exceptions.py  format.py
python/sony_camera_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: convert_pdfs_to_md.py
sony_camera_control/: parser.py  ptp.py
sony_camera_control.egg-info/: PKG-INFO  top_level.txt
tests/: conftest.py  test_camera.py  test_constants.py  test_exceptions.py  test_format.py  test_hardware.py  test_parser.py
(+878 files in other folders)
